added the exception handling using controll advice and JSR-303 Bean validations

--- a/medilab-self-singup-service/src/main/resources/application.properties
+++ b/medilab-self-singup-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=9095
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2Console
+
+
+user.data.duplicate.message=The Data submitted may have already existed. Please check the data and submit once again 
