--- a/medilab-self-singup-service/pom.xml
+++ b/medilab-self-singup-service/pom.xml
@@ -52,6 +52,10 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
