gateway service updated code as on 31-03-2021

--- a/medilab-app-gateway/src/main/resources/application.properties
+++ b/medilab-app-gateway/src/main/resources/application.properties
@@ -22,3 +22,7 @@ zuul.routes.medilab-address-service.path=/medilab-address-service/**
 
 zuul.routes.medilab-department-service.service-id=medilab-department-service
 zuul.routes.medilab-department-service.path=/medilab-department-service/**
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
