--- a/medilab-app-gateway/pom.xml
+++ b/medilab-app-gateway/pom.xml
@@ -53,7 +53,20 @@
 				spring-cloud-starter-netflix-eureka-client
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>3.5.2</version>
+</dependency>
+		
 	</dependencies>
+	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
